get&getAll works
