# api/src/main/resources/public/api.yaml
@@ -467,6 +467,18 @@ components:
           schema:
             $ref: '#/components/schemas/ErrorDTO'
   schemas:
+    CountryDTO:
+      type: object
+      required:
+        - name
+      properties:
+        id:
+          type: integer
+          format: int32
+        name:
+          type: string
+        isoCode:
+          type: string
     UserDTO:
       type: object
       required:
@@ -489,12 +501,12 @@ components:
         lastName:
           type: string
         country:
-          type: string
+          type: countryDTO
         driverLicenseNo:
           type: string
         status:
           type: string
-          enum: [ACTIVE, DELETED]
+#          enum: [ACTIVE, DELETED]
 
     CarDTO:
       type: object
